<resources>
    <string name="app_name">Home Budget</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="enter">Enter</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="home_budget">Home Budget</string>
    <string name="todo">TODO</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="home_budget_icon">Home Budget Icon</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change password</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="new_budget">New Budget</string>
    <string name="current_budget">Current budget</string>
    <string name="archive_budgets">Archive budgets</string>
    <string name="new_saving_strategy">New Saving Strategy</string>
    <string name="current_saving_strategies">Current Saving Strategies</string>
    <string name="my_account">My Account</string>
    <string name="logout">Logout</string>
    <string name="archive_saving_strategies">Archive Saving Strategies</string>
    <string name="go_back">Go back</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="new_strategy">New strategy</string>
    <string name="amount">Amount</string>
    <string name="months">Months</string>
    <string name="sign_up">Sign up</string>
    <string name="back_to_login_page">Back to Login Page</string>
    <string name="i_agree_to_the_terms_of_service">I agree to the Terms of Service</string>
    <string name="edit_icon">Edit icon</string>
    <string name="add_expense">Add expense</string>
    <string name="new_expense">New expense</string>
    <string name="goal">Goal</string>
    <string name="start_date">Start date</string>
    <string name="strategy">Strategy</string>
    <string name="category">Category</string>
    <string name="show_chart">Show chart</string>
    <string name="home_icon">Home Icon</string>
    <string name="starting_date">Starting date</string>
    <string name="new_regular_expense">New regular expense</string>
    <string name="date">Date</string>
    <string name="custom_expense">Custom expense</string>
    <string name="regular_expense">Regular expense</string>
    <string name="general_info">General info</string>
    <string name="income">Income</string>
    <string name="budget">Budget</string>
    <string name="custom_expenses">Custom expenses</string>
    <string name="regular_expenses">Regular expenses</string>
    <string name="strategies">Strategies</string>
    <string name="plus_new_expense">+ New expense</string>
    <string name="summary">Summary</string>
    <string name="create">Create</string>
    <string name="confirm">Confirm</string>
    <string name="dash">-</string>
</resources>