<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="10dp"
    app:strokeColor="@color/white"
    app:cardBackgroundColor="?attr/colorPrimaryDark"
    app:cardCornerRadius="10dp"
    app:strokeWidth="2.5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="8dp"
        android:gravity="center_horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strategy"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_gravity="center">
            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_strategy_card_delete"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:background="@color/transparent"
                android:scaleX="0.6"
                android:scaleY="0.6"
                app:icon="@drawable/delete_icon"
                app:iconTint="@color/white" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_strategy_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_strategy_card_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white"
                android:minLines="3"
                android:gravity="center_vertical|center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/category"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_strategy_card_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/goal"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_strategy_card_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/start_date"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_strategy_card_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/months"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_strategy_card_months"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/button_strategy_card"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/show_chart"
            android:textColor="@color/white">

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>