<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        app:strokeColor="@color/white"
        app:cardBackgroundColor="?attr/colorPrimaryDark"
        app:cardCornerRadius="10dp"
        app:strokeWidth="2.5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:textColor="@color/white"
                android:textSize="30sp">
            </com.google.android.material.textview.MaterialTextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_layout_new_budget_summary_tab_date"
                android:paddingHorizontal="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/date"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_new_budget_summary_tab_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/dash"
                    android:textSize="18sp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_layout_new_budget_summary_tab_income"
                android:paddingHorizontal="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/income"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_new_budget_summary_tab_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/dash"
                    android:textSize="18sp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_layout_new_budget_summary_tab_custom_expenses"
                android:paddingHorizontal="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/custom_expenses"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_new_budget_summary_tab_custom_expenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/dash"
                    android:textSize="18sp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_layout_new_budget_summary_tab_regular_expenses"
                android:paddingHorizontal="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/regular_expenses"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_new_budget_summary_tab_regular_expenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/dash"
                    android:textSize="18sp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_layout_new_budget_summary_tab_strategies"
                android:paddingHorizontal="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/strategies"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_new_budget_summary_tab_strategies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/dash"
                    android:textSize="18sp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_new_budget_summary_tab_create"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:fontFamily="sans-serif-medium"
                android:backgroundTint="@color/gradStart"
                app:cornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/nested_scroll_view_new_budget_custom_expenses_tab"/>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>

