<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        app:strokeColor="@color/white"
        app:cardBackgroundColor="?attr/colorPrimaryDark"
        app:cardCornerRadius="10dp"
        app:strokeWidth="2.5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="8dp"
            android:gravity="center_horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_info"
                android:textColor="@color/white"
                android:textSize="30sp">
            </com.google.android.material.textview.MaterialTextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/date"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_current_budget_general_tab_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/income"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_current_budget_general_tab_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"/>

            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>

